# KMR_dxl

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
config/: KMR_dxl_motor_models.hpp  KMR_dxl_structures.hpp
config/motor_models/: MX_106.hpp  MX_106.yaml  MX_28.hpp  MX_28.yaml  MX_64.hpp  MX_64R.yaml  XH540_W150.hpp  XH540_W150.yaml  XH540_W270.hpp  XH540_W270.yaml  XM430_W350.hpp  XM430_W350.yaml  XM540_W150.hpp  XM540_W150.yaml  XM540_W270.hpp  XM540_W270.yaml  XW430_T200.hpp  XW430_T200.yaml  XW540_T140.hpp  XW540_T140.yaml  XW540_T260.hpp  XW540_T260.yaml
docs/: Doxyfile.in
docs/markdown_sources/: mainpage.md  setup.md  setup_git.md  use.md  use_git.md
docs/markdown_sources/gamepads/: ps5.md
example/: CMakeLists.txt  CMakeLists_install.txt  ex1_position.cpp  ex2_speed.cpp  ex3_current.cpp  ex4_pwm.cpp  ex5_multiturn.cpp  ex6_custom_handlers.cpp  ex6_hybrid.cpp  ex7_custom_handlers.cpp  ex_multiturn.cpp  example1.cpp  example_position_control.cpp
include/: KMR_dxl.hpp  KMR_dxl_hal.hpp  KMR_dxl_handler.hpp  KMR_dxl_motor_handler.hpp  KMR_dxl_reader.hpp  KMR_dxl_robot.hpp  KMR_dxl_utils.hpp  KMR_dxl_writer.hpp  kmr_dxl_hal.hpp  kmr_dxl_handler.hpp  kmr_dxl_reader.hpp  kmr_dxl_robot.hpp  kmr_dxl_writer.hpp  lib_controller.hpp  lib_dxl_handler.hpp  lib_dxl_reader.hpp  lib_dxl_writer.hpp  lib_hal.hpp  lib_robot.hpp
source/: KMR_dxl_hal.cpp  KMR_dxl_handler.cpp  KMR_dxl_motor_handler.cpp  KMR_dxl_reader.cpp  KMR_dxl_robot.cpp  KMR_dxl_utils.cpp  KMR_dxl_writer.cpp  kmr_dxl_hal.cpp  kmr_dxl_handler.cpp  kmr_dxl_reader.cpp  kmr_dxl_robot.cpp  kmr_dxl_writer.cpp  lib_dxl_handler.cpp  lib_dxl_reader.cpp  lib_dxl_writer.cpp  lib_hal.cpp  lib_robot.cpp
